--- a/todo.org
+++ b/todo.org
@@ -16,6 +16,8 @@
 ** [X] Add multi-line input
 ** [X] Add a flag to not show node output in the UI. Useful for input node, etc
 ** [ ] Add a way to restrict number of loops when cycling
+** [ ] Stopping executor with ctrl+c during input and then starting it with /use does not stop at input, but retries last input node
+** [ ] It seems like reset_policy: keep_results is keeping more than a single result. Maybe it should, but then we need keep_final policy too.
 * [ ] Configuration
 ** [X] Redo include file syntax to include section with default variable values
 ** [ ] Update templates and parametrize them via variables
