--- a/todo.org
+++ b/todo.org
@@ -17,7 +17,7 @@
 ** [X] Add a flag to not show node output in the UI. Useful for input node, etc
 ** [ ] Add a way to restrict number of loops when cycling
 ** [ ] Stopping executor with ctrl+c during input and then starting it with /use does not stop at input, but retries last input node
-** [ ] It seems like reset_policy: keep_results is keeping more than a single result. Maybe it should, but then we need keep_final policy too.
+** [X] It seems like reset_policy: keep_results is keeping more than a single result. Maybe it should, but then we need keep_final policy too.
 * [ ] Configuration
 ** [X] Redo include file syntax to include section with default variable values
 ** [ ] Update templates and parametrize them via variables
@@ -84,7 +84,7 @@ Concrete example: files that were read and already in context.
 **** [X] Implement tool calling
 *** [X] Verify if we're including files multiple times in responsing, thus burning tokens
 *** [X] Limit context length and reject tool calls when over
-*** [ ] Prevent too many files to be read
+*** [X] Prevent too many files to be read
 *** [X] Dynamic output selection by LLM
 **** [X] Configurable system prompt extension
 **** [X] Cleanup logic
