--- a/todo.org
+++ b/todo.org
@@ -31,12 +31,14 @@ Concrete example: files that were read and already in context.
 ** [ ] Tool calling timeouts and failures
 ** [ ] Add a way for human to unblock failures by retrying last operation
 * [ ] Cleanup all dependencies
-- Move graph models out of graph, move runtime graph generation out of Graph class
-- Move executor/models.py out to root
-- Move preprocessors to llm/ and move llm.py to llm/__init__.py
+** [ ] Move graph models out of graph, move runtime graph generation out of Graph class
+** [ ] Move executor/models.py out to root
+** [ ] Move preprocessors to llm/ and move llm.py to llm/__init__.py
 * [X] UI protocol
 ** [X] In-memory bidirectional stream implementation for TUI
 * [ ] Terminal UI
+** [ ] Print node transitions
+** [ ] Format tool calls
 ** [ ] Assume markdown as default formatter
 ** [X] Add way to show log messages (inline? out of process?)
 ** [X] Fix line breaks - if line is naturally too long, then moving caret to the beginning of the line does not work, we need to go one line up.
@@ -98,7 +100,8 @@ Concrete example: files that were read and already in context.
 *** [X] Do not add empty message to output
 *** [ ] Auto-retry on timeout
 *** [ ] Auto-retry when throttled
-*** [ ] For some reason tokens are not accumulated for tool calls
+*** [X] For some reason tokens are not accumulated for tool calls
+*** [ ] Figure out why pricing estimates are all zeroes
 ** [ ] Diff apply node
 *** [X] Base parser
 *** [X] Add a way to write file changes after confirmation
