--- a/todo.org
+++ b/todo.org
@@ -45,6 +45,7 @@ Concrete example: files that were read and already in context.
 ** [ ] Add syntax name hint to apply formatting
 ** [X] Better event handler loop as current implementation is hacky
 * [ ] Terminal UI
+** [ ] Add shortcuts to cancel current input easily
 ** [ ] Simple styling
 *** [ ] Color usage
 *** [ ] Separate tool calls from outputs
@@ -81,6 +82,7 @@ Concrete example: files that were read and already in context.
 *** [X] Needs a separate execution thread and simple async API wrapper RPC, as it is synchronous
 - Take callable function as a parameter, run it in Know thread, return results back
 *** [ ] Add progress report
+*** [ ] Figure out how to express 3rd party dependencies and give access
 ** [X] Add a way to auto-approve tool calls
 ** [ ] Add pattern matching rules to auto-approve rule calls
 * [ ] Block parsers
@@ -96,10 +98,12 @@ Concrete example: files that were read and already in context.
 *** [ ] Unified Diff format
 * [ ] Nodes
 ** [X] Add project as a parameter to executor
-** [X] Add a node that injects files in context. Add file manager.
+** [ ] Add a node that injects files in context. Add file manager.
 *** [X] Needs file auto-complete UI support
 *** [X] Add file context manager
 *** [X] Add UI support for file context management
+*** [ ] Show files added and removed, as well as current list of files for /fadd and /fdel
+*** [ ] Figure out a way to inject files into patch without apply_patch having access to readfile
 ** [X] [#A] Think how to manage state for a run
 ** [X] Base node runner class
 ** [ ] LLM node
