--- a/todo.org
+++ b/todo.org
@@ -24,6 +24,7 @@
 ** [ ] Stopping executor with ctrl+c during input and then starting it with /use does not stop at input, but retries last input node - verify
 ** [X] It seems like reset_policy: keep_results is keeping more than a single result. Maybe it should, but then we need keep_final policy too.
 * [ ] Configuration
+** [ ] Ensure that variables are resolved together and then updated.
 ** [ ] Add a way to cascade variables by setting variable value to other variable value, recursively
 ** [X] Redo include file syntax to include section with default variable values
 ** [ ] Update templates and parametrize them via variables
